# rsync-rs

./: Cargo.toml
benches/: rsync_bench.rs
src/: codec.rs  consts.rs  crc.rs  diff.rs  hasher.rs  lib.rs  patch.rs  rabinkarp.rs  signature.rs  sum_hash.rs  tests.rs  types.rs  util.rs
src/md4/: mod.rs
